Always install the microdump signal handler on N+ devices.

N+ shared library namespacing means that the current detection code that
determines whether it is safe to install the microdump signal handler
fails, because it is impossible to dlopen libnativebridge (because it
isn't in the NDK).

Because the libnativebridge on N+ devices is sufficiently recent as to
not need the test, we simply short-circuit on those devices.

BUG=662853

Review-Url: https://codereview.chromium.org/2483203002
Cr-Commit-Position: refs/heads/master@{#430713}

Former-commit-id: 2c944c9e76acc4e22a67bff89e33afd2342db0a1